fix: Improve chart tooltip and remove focus outlines
Enhances chart tooltips with better readability and styling. Also removes unnecessary focus outlines from SVG elements to prevent visual clutter on interactive charts.

--- a/index.html
+++ b/index.html
@@ -65,6 +65,15 @@
         transition: background-color 0.8s ease;
       }
 
+      /* 修复点击可视化图表时的白色边框 */
+      *:focus {
+        outline: none !important;
+      }
+      
+      svg, rect, path, circle {
+        outline: none !important;
+      }
+
       .ambient-bg {
         position: fixed; top: 0; left: 0; width: 100vw; height: 100vh; 
         z-index: -1; overflow: hidden; 
