feat: Replace LeanCloud with Supabase for cloud sync
Switches the backend cloud storage service from LeanCloud to Supabase. This involves updating dependencies, configuration management, and initialization logic to integrate with the Supabase SDK.

The `Settings` page and `TanxingContext` have been modified to reflect this change, using Supabase URLs and anonymous keys instead of LeanCloud App ID and Key. Cloud sync functionality will now leverage Supabase for data persistence and retrieval.

--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="zh-CN" class="dark">
   <head>
@@ -65,14 +66,8 @@
         transition: background-color 0.8s ease;
       }
 
-      /* 修复点击可视化图表时的白色边框 */
-      *:focus {
-        outline: none !important;
-      }
-      
-      svg, rect, path, circle {
-        outline: none !important;
-      }
+      *:focus { outline: none !important; }
+      svg, rect, path, circle { outline: none !important; }
 
       .ambient-bg {
         position: fixed; top: 0; left: 0; width: 100vw; height: 100vh; 
@@ -146,7 +141,7 @@
     "@google/genai": "https://esm.sh/@google/genai@^1.34.0",
     "recharts": "https://esm.sh/recharts@^3.6.0",
     "lucide-react": "https://esm.sh/lucide-react@^0.562.0",
-    "leancloud-storage": "https://esm.sh/leancloud-storage@4.15.0"
+    "@supabase/supabase-js": "https://esm.sh/@supabase/supabase-js@2.39.0"
   }
 }
 </script>
