--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
     "@google/genai": "https://esm.sh/@google/genai@^1.34.0",
     "recharts": "https://esm.sh/recharts@^3.6.0",
     "lucide-react": "https://esm.sh/lucide-react@^0.562.0",
-    "@supabase/supabase-js": "https://esm.sh/@supabase/supabase-js@2.39.0"
+    "pocketbase": "https://esm.sh/pocketbase@0.21.3"
   }
 }
 </script>
